--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
+          <li><a href="#mydream">My Dream</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -237,15 +238,20 @@
               </article>
             </div>
           </div>
-        </div>
-          <p>
-            <br />
-            I am interested in cyber security and Web programming. I want to improve myself further and produce projects in these areas.
-            I aim to improve in cyber security by conducting simple experiments on the virtual machine I created on my personal computer.
-            In the web space, I use React and Next.js. I aim to make simple projects and become a Fullstack Developer.          
-            <br />
-          </p>
-      </div>
+      <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#mydream'">
+    </section>
+
+    <section id="mydream">
+      <p class="section__text__p1">I want to write</p>
+      <h1 class="title">My Dream</h1>
+      
+      <p>
+        <br />
+        I am interested in cyber security and Web programming. I want to improve myself further and produce projects in these areas.
+        I aim to improve in cyber security by conducting simple experiments on the virtual machine I created on my personal computer.
+        In the web space, I use React and Next.js. I aim to make simple projects and become a Fullstack Developer.          
+        <br />
+      </p>
       <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
     </section>
     
@@ -320,6 +326,7 @@
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
+            <li><a href="#mydream">My Dream</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
