--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toogleMenu()">About</a></li>
           <li><a href="#experience" onclick="toogleMenu()">Experience</a></li>
+          <li><a href="#mydream" onclick="toogleMenu()">My Dream</a></li>
           <li><a href="#projects" onclick="toogleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toogleMenu()">Contact</a></li>
         </div>
@@ -43,9 +44,9 @@
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Ertan Osman ALABAY</h1>
-        <p class="section__text__p2">Frontend Developer</p>
+        <p class="section__text__p2">Computer Engineer</p>
         <div class="btn-container">
-          <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">
+          <button class="btn btn-color-2" onclick="window.open('./assets/CV.pdf')">
             Dowload CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='#contact'">
@@ -53,9 +54,8 @@
           </button>
         </div>
         <div class="socials-container">
-          <img src="./assets/linkedin.png" alt="My Linkedin profile" class="icon" onclick="location.href='https://www.linkedin.com'">
-          <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/'">
-          
+          <img src="./assets/linkedin.png" alt="My Linkedin profile" class="icon" onclick="location.href='https://www.linkedin.com/in/ertan-osman-alabay/'">
+          <img src="./assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/ertanAlabay'">
         </div>
       </div>
     </section>
@@ -262,42 +262,70 @@
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+              <img src="./assets/djangoapp.png" alt="Project 1" class="project-img">
             </div>
-            <h2 class="experience-sub-title prject-title">Project One</h2>
+            <h2 class="experience-sub-title prject-title">Django Blog App</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ertanAlabay/django-blog-app'">
                 Github
               </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='#projects'">
                 Live Demo
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+              <img src="./assets/weatherapp.png" alt="Project 2" class="project-img">
             </div>
-            <h2 class="experience-sub-title prject-title">Project Two</h2>
+            <h2 class="experience-sub-title prject-title">Weather App</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ertanAlabay/WheratherApp'">
                 Github
               </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://gregarious-ganache-8a917a.netlify.app'">
                 Live Demo
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img src="./assets/project-3.png" alt="Project 3" class="project-img">
+              <img src="./assets/aciklama.png" alt="Project 3" class="project-img">
             </div>
-            <h2 class="experience-sub-title prject-title">Project Three</h2>
+            <h2 class="experience-sub-title prject-title">Full Stack App</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ertanAlabay/fullstack-project'">
                 Github
               </button>
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='#projects'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/aciklama.png" alt="Project 4" class="project-img">
+            </div>
+            <h2 class="experience-sub-title prject-title">Fitness App</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href=https://github.com/ertanAlabay/fitness-app">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='#projects'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/game.png" alt="Project 5" class="project-img">
+            </div>
+            <h2 class="experience-sub-title prject-title">UE5 Basic Game</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ertanAlabay/UE5_BASIC_GAME'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='#projects'">
                 Live Demo
               </button>
             </div>
@@ -316,7 +344,7 @@
         </div>
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" alt="Linkedin icon" class="icon contact-icon">
-          <p><a href="https://linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/in/ertan-osman-alabay/" target="_blank">LinkedIn</a></p>
         </div>
       </div>
     </section>
