--- a/index.html
+++ b/index.html
@@ -325,7 +325,35 @@
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ertanAlabay/UE5_BASIC_GAME'">
                 Github
               </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.youtube.com/watch?v=0YCRVGhKgCA'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="" alt="Project 5" class="project-img">
+            </div>
+            <h2 class="experience-sub-title prject-title">MySQL CRUD Function</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ertanAlabay/MySQL-CRUD'">
+                Github
+              </button>
               <button class="btn btn-color-2 project-btn" onclick="location.href='#projects'">
+                Live Demo
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/surveyapp.png" alt="Project 5" class="project-img">
+            </div>
+            <h2 class="experience-sub-title prject-title">Anket Uygulaması</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ertanAlabay/surveeyApp'">
+                Github
+              </button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.youtube.com/watch?v=T86xfla_vzg'">
                 Live Demo
               </button>
             </div>
